# CS267-hw1-gemm

./: .gitignore  CMakeLists.txt  README.md  dgemm-blocked.c  dgemm-blocked.c.in  job-blocked.in  job.in
container/: gcc_cmake_openblas.def
output/: output-blocked.txt  output-blocked2.txt
